--- a/Notebooks/Main.ipynb
+++ b/Notebooks/Main.ipynb
@@ -24,7 +24,17 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Run experiments"
+    "# Run experiments\n",
+    "`expected run length for 1 replication for 1 exit type: ~20 mins`\n",
+    "\n",
+    "Parameters for `run()`:\n",
+    "- `model` = MESA model. Currently uses the full library map (incl. image conversion)\n",
+    "- `map_img_path` = Library map image. A toy (verification) version of the map is available as 'Images/Library_Toyplan2_v1.png'\n",
+    "- `n_visitors` = number of visitors\n",
+    "- `n_officestaff` = number of office staff\n",
+    "- `visualize` = whether to instantiate animated simulation. Default: False\n",
+    "- `n_replications` = number of replications per exit type (either A,B,C, or any combination of any exit)\n",
+    "- `valid_exits` = list of exit types for analysis"
    ],
    "metadata": {
     "collapsed": false,
@@ -39,8 +49,12 @@
    "outputs": [],
    "source": [
     "exp = Experiment()\n",
+    "\"\"\"\n",
+    "Params:\n",
+    "\"\"\"\n",
+    "# Params:\n",
     "\n",
-    "exp.run(model=EvacuationModel, map_img_path='Images/Library_NewPlan2.png',\n",
+    "exp.run(model=EvacuationModel, map_img_path='Images/Library_NewPlan2_map.png',\n",
     "        n_visitors=50, n_officestaff=10, visualize=False, n_replications=10, valid_exits=[ExitType.B])\n",
     "\n",
     "# Save the data\n",
@@ -49,42 +63,8 @@
     "#               modifier=2 --> exit types AB, BC\n",
     "#               modifier=3 --> exit types AC, ABC\n",
     "#               (modifier=0 is just for testing purposes)\n",
-    "exp.save_data_to_pickle(modifier='1_B')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# Load the data\n",
-    "# evac_times, average_evac_times = exp.load_pickled_data(modifier=0)\n",
-    "# evac_times1, average_evac_times1 = exp.load_pickled_data(modifier=1)\n",
-    "# evac_times2, average_evac_times2 = exp.load_pickled_data(modifier=2)\n",
-    "# evac_times3, average_evac_times3 = exp.load_pickled_data(modifier=3)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# # Combine corresponding dictionaries\n",
-    "# exp.combine_results(evac_times1, evac_times2, evac_times3, average_evac_times1, average_evac_times2, average_evac_times3)\n",
+    "exp.save_data_to_pickle(modifier='1_B')\n",
     "\n",
-    "# Do all kind of data visualization.\n",
     "exp.show_execution_times()"
    ],
    "metadata": {
@@ -97,7 +77,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Run an animation"
+    "# Run an animation\n",
+    "_(take note an animation run is very slow!)_\n",
+    "\n",
+    "This section has the same code structure as the previous, but this time with `visualize=True`"
    ],
    "metadata": {
     "collapsed": false,
@@ -108,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [
     {
      "name": "stdout",
@@ -124,41 +107,28 @@
       "\t- adult_ratio: \t\t0.5\n",
       "\t- familiarity: \t\t0.1\n",
       "\n",
-      "Set Map object currently Images/Library_NewPlan2.png.\n",
+      "Set Map object currently Images/Library_NewPlan2_map.png.\n",
       "\n",
       "Running visualization.\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'Images/Library_NewPlan2.png'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
-      "\u001B[0;32m<ipython-input-2-a84741ec0fb6>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[0mexp\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mExperiment\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 3\u001B[0;31m exp.run(model=EvacuationModel, map_img_path='Images/Library_NewPlan2.png',\n\u001B[0m\u001B[1;32m      4\u001B[0m         n_visitors=50, n_officestaff=10, visualize=True, n_replications=1, valid_exits=[ExitType.ABC])\n\u001B[1;32m      5\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/PycharmProjects/ABM_2021_Q1/Scripts/Experiment.py\u001B[0m in \u001B[0;36mrun\u001B[0;34m(self, model, n_replications, visualize, max_run_length, n_visitors, n_officestaff, female_ratio, adult_ratio, familiarity, map_img_path, valid_exits)\u001B[0m\n\u001B[1;32m     41\u001B[0m             \u001B[0mmessage\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;34mf\"\\nRunning replications for exit type: {ex}\"\u001B[0m \u001B[0;32mif\u001B[0m \u001B[0;32mnot\u001B[0m \u001B[0mvisualize\u001B[0m \u001B[0;32melse\u001B[0m \u001B[0;34m\"\\nRunning visualization.\"\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     42\u001B[0m             \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34mf\"{message}\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 43\u001B[0;31m             self.evacuation_times[ex] = self.run_n_replications(n_replications=n_replications, visualize=visualize,\n\u001B[0m\u001B[1;32m     44\u001B[0m                                                                 \u001B[0mmax_run_length\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mmax_run_length\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mn_visitors\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mn_visitors\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     45\u001B[0m                                                                 \u001B[0mn_officestaff\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mn_officestaff\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/PycharmProjects/ABM_2021_Q1/Scripts/Experiment.py\u001B[0m in \u001B[0;36mrun_n_replications\u001B[0;34m(self, n_replications, visualize, max_run_length, n_visitors, n_officestaff, female_ratio, adult_ratio, familiarity, valid_exits)\u001B[0m\n\u001B[1;32m     76\u001B[0m         \u001B[0;32mfor\u001B[0m \u001B[0mi\u001B[0m \u001B[0;32min\u001B[0m \u001B[0mrange\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mn_replications\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     77\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 78\u001B[0;31m             evac_time = self.run_one_replication(visualize=visualize, max_run_length=max_run_length, n_visitors=n_visitors,\n\u001B[0m\u001B[1;32m     79\u001B[0m                                                  \u001B[0mn_officestaff\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mn_officestaff\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     80\u001B[0m                                                  \u001B[0mfemale_ratio\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mfemale_ratio\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0madult_ratio\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0madult_ratio\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mfamiliarity\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mfamiliarity\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/PycharmProjects/ABM_2021_Q1/Scripts/Experiment.py\u001B[0m in \u001B[0;36mrun_one_replication\u001B[0;34m(self, visualize, max_run_length, n_officestaff, n_visitors, female_ratio, adult_ratio, familiarity, valid_exits, model, map_img_path)\u001B[0m\n\u001B[1;32m    106\u001B[0m         \u001B[0;32mif\u001B[0m \u001B[0mvisualize\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    107\u001B[0m             \u001B[0;31m# show_visualization(MapModel)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 108\u001B[0;31m             \u001B[0mshow_visualization\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mmodel\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mmap_img_path\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    109\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    110\u001B[0m         \u001B[0;32melse\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/PycharmProjects/ABM_2021_Q1/Scripts/Visualization.py\u001B[0m in \u001B[0;36mshow_visualization\u001B[0;34m(model, img_map_path)\u001B[0m\n\u001B[1;32m     94\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     95\u001B[0m     \u001B[0;32mif\u001B[0m \u001B[0mimg_map_path\u001B[0m \u001B[0;32mis\u001B[0m \u001B[0;32mnot\u001B[0m \u001B[0;32mNone\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 96\u001B[0;31m         \u001B[0mheight\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mwidth\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mget_border_dims\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mimg_map_path\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     97\u001B[0m         \u001B[0mpx_rep\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;36m2\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     98\u001B[0m         \u001B[0mcanvas\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mCanvasGrid\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0magent_portrayal\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mwidth\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mheight\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mwidth\u001B[0m\u001B[0;34m*\u001B[0m\u001B[0mpx_rep\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mheight\u001B[0m\u001B[0;34m*\u001B[0m\u001B[0mpx_rep\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/PycharmProjects/ABM_2021_Q1/Scripts/EvacuationModel.py\u001B[0m in \u001B[0;36mget_border_dims\u001B[0;34m(img_path)\u001B[0m\n\u001B[1;32m     33\u001B[0m     \u001B[0;34m:\u001B[0m\u001B[0;32mreturn\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0mtuple\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mheight\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0mwidth\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     34\u001B[0m     \"\"\"\n\u001B[0;32m---> 35\u001B[0;31m     \u001B[0mim\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0marray\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mImage\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mopen\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mimg_path\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     36\u001B[0m     \u001B[0;32mreturn\u001B[0m \u001B[0mim\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mshape\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m-\u001B[0m\u001B[0;36m1\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     37\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/PIL/Image.py\u001B[0m in \u001B[0;36mopen\u001B[0;34m(fp, mode, formats)\u001B[0m\n\u001B[1;32m   2889\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   2890\u001B[0m     \u001B[0;32mif\u001B[0m \u001B[0mfilename\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m-> 2891\u001B[0;31m         \u001B[0mfp\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mbuiltins\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mopen\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mfilename\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m\"rb\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m   2892\u001B[0m         \u001B[0mexclusive_fp\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;32mTrue\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   2893\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: 'Images/Library_NewPlan2.png'"
+      "\n",
+      "Interface starting at http://127.0.0.1:8521\n",
+      "Socket opened!\n",
+      "{\"type\":\"reset\"}\n"
      ]
     }
    ],
    "source": [
     "exp = Experiment()\n",
     "\n",
-    "exp.run(model=EvacuationModel, map_img_path='Images/Library_NewPlan2.png',\n",
+    "exp.run(model=EvacuationModel, map_img_path='Images/Library_NewPlan2_map.png',\n",
     "        n_visitors=50, n_officestaff=10, visualize=True, n_replications=1, valid_exits=[ExitType.ABC])\n",
     "\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -177,9 +147,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "pycharm-2517ad8d",
+   "name": "pycharm-c9344927",
    "language": "python",
-   "display_name": "PyCharm (md_final)"
+   "display_name": "PyCharm (final_assignment)"
   },
   "language_info": {
    "codemirror_mode": {
